src/generators/snapshots/moon_cram__generators__generator__tests__update__markdown__adjust_to_right_amount_of_backticks.snap
---
source: src/generators/generator.rs
expression: result
---
This is a test

`````mooncram
$ the command
````
new output
````
`````

