src/generators/snapshots/moon_cram__generators__generator__tests__update__markdown__comments_in_code.snap
---
source: src/generators/generator.rs
expression: result
---
This is a test

```mooncram
# some comment before
$ the command
new output
```

