src/generators/snapshots/moon_cram__generators__generator__tests__update__markdown__simple_unchanged.snap
---
source: src/generators/generator.rs
expression: result
---
# This is a test

```mooncram
$ the command
an expectation
```

