src/generators/snapshots/moon_cram__generators__generator__tests__update__markdown__updated_only_testcases.snap
---
source: src/generators/generator.rs
expression: result
---
# this is a document

there are many lines

```rust
println!("including code");
```

## Then there is a test

```mooncram
$ the command 1
new output ONE
```

Followed by other stuff



Followed by another test

```mooncram
$ the command 2
new output ZWEI
```

ultimately ending in stuff

