src/generators/snapshots/moon_cram__generators__generator__tests__update__markdown__updated_output_none_zero_exit_code.snap
---
source: src/generators/generator.rs
assertion_line: 50
expression: result
---
This is a test

```mooncram
$ the command
same output
[10]
```

